--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dap.u</Dap></title>
+    <link rel="stylesheet" href="./app/index.css">
 </head>
-<body>
+<body background="./app/htmlimages/Background.png">
+
+    <div class="bar">
+      <img src="./app/htmlimages/logo blanc.png">
+    </div>
+    
+    <app-container></app-container>
 
 </body>
 </html>
