--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body background="./app/htmlimages/Background.png">
 
-    <div class="bar">
-      <img src="./app/htmlimages/logo blanc.png">
+    <input class="bar">
+      <img class="dapIcon" src="./app/htmlimages/logo blanc.png">
+      <input class="search" type="search" placeholder="Search...">
     </div>
     
     <app-container></app-container>
