Npm start, css and first link to grandfather
done

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
       <img class="dapIcon" src="./app/htmlimages/logo blanc.png">
       <input class="search" type="search" placeholder="Search...">
     </div>
-    
+
     <app-container></app-container>
 
+
+    <script src="./app/grand.js" type="module"></script>
 </body>
 </html>
