Video section printed
done video section

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dap.u</Dap></title>
     <link rel="stylesheet" href="./app/index.css">
+
 </head>
 <body background="./app/htmlimages/Background.png">
 
@@ -13,7 +14,7 @@
       <img class="dapIcon" src="./app/htmlimages/logo blanc.png">
       <input class="search" type="search" placeholder="Search...">
     </div>
-
+    <div id="box"></div>
     <app-container></app-container>
 
 
