--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <h1 class="messagecont">Messages</h1>
     <div class="blackCont">
     </div>
+
+    <input class="searchMessage" type="search" placeholder="Search...">
+
     
 
 
